--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
-<heroes></heroes>
+<nav>
+    <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+    <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+</nav>
+
+<router-outlet></router-outlet>
