--- a/src/app/hero-component/hero.component.html
+++ b/src/app/hero-component/hero.component.html
@@ -1,8 +1,13 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
- <li *ngFor="let hero of heroes" (click)="onSelect(hero) " [class.selected]="hero === selectedHero">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+ <li *ngFor="let hero of heroes" (click)="onSelect(hero) "  [class.selected]="hero === selectedHero">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
 </li>
 </ul>
 
-<app-hero-detail-component [hero]="selectedHero"></app-hero-detail-component>
+<div *ngIf="selectedHero">
+  <h2>
+    {{selectedHero.name | uppercase}} is my hero
+  </h2>
+  <button (click)="gotoDetail()">View Details</button>
+</div>
